2001-05-10  Martin Baulig  <baulig@suse.de>

	* gnome-file-entry.h (GnomeFileEntry): Derive from GnomeSelectorClient.
	* gnome-file-entry.c (gnome_file_entry_new): Use GnomeSelectorComponent.

	* gnome-image-entry-component.h (GnomeImageEntryComponent): Derive from
	GnomeSelectorComponent.

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-selector-component.[ch]: New files.

	* gnome-icon-selector-component.h (GnomeIconSelectorComponent): Derive
	from GnomeSelectorComponent.

	* gnome-image-selector.[ch]: New files; this is a GnomeSelectorClient
	wrapper for the GnomeIconSelectorComponent.

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-icon-selector-component.[ch]: Use the new GnomeSelector API.

	* gnome-icon-selector.[ch]: Renamed to gnome-icon-selector-component.[ch].

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-icon-entry.[ch]: Renamed to gnome-image-entry-component.[ch].

	* gnome-image-entry-component.c: This is now a GnomeSelector component.

	* gnome-image-entry.[ch]: New files; this is a GnomeSelectorClient
	wrapper for the GnomeImageEntryComponent.

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-entry.h (gnome_entry_new): Removed `history_id' argument.
	(gnome_entry_new_full): Likewise.
	* gnome-file-entry.h (gnome_file_entry_new): Likewise.

2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-entry.h (gnome_entry_new_full): New function.

	* gnome-file-entry.[ch]: New files; this already existed in
	GNOME 1.x, but we're now using the new GnomeSelector API.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-entry.[ch]: Reflect latest GnomeSelector API changes.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h (gnome_selector_client_set_uri):
	Added `GDestroyNotify destroy_fn' argument.

	* gnome-selector-client.c (gnome_selector_client_set_uri):
	Actually invoke the async_func when we get the event.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h