@@ -51,7 +51,6 @@
 
 #include <libgnomeui/gnome-icon-list.h>
 #include <libgnomeui/gnome-icon-item.h>
-#include <libgnomeui/gnome-icon-selector.h>
 #include <libgnomeui/gnome-canvas-init.h>
 #include <libgnomeui/gnome-init.h>
 #include <libgnomeui/gnome-less.h>
